# CrystalUtil

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  from_main.txt  main.cpp
doc/: doc.md
include/CrystalUtil/: log.h  util.h
include/CrystalUtil/log/: logger.h
lib/spdlog/: CMakeLists.txt
src/: log.cpp  util.cpp
src/log/: logger.cpp
test/: CMakeLists.txt  test.cpp
test/GoogleTest/: CMakeLists.txt
